2005-07-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Processing of jabber:iq:register totally
	moved to mod_register.erl (thanks to Sergei Golovan)
	* src/mod_register.erl: Likewise

	* src/win32/ejabberd.nsi: Added two pictures in installer (thanks
	to Maxim Ryazanov)
	* src/win32/ejabberd_header.bmp: Likewise
	* src/win32/ejabberd_intro.bmp: Likewise

	* src/web/ejabberd_web_admin.erl: Fixed spelling of word
	"authentication"
	* src/ejabberd_c2s.erl: Likewise

2005-07-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_register.erl: Bugfix

	* src/mod_vcard.erl: Bugfix

	* src/ejabberd_app.erl: Updated to allow different authentication
	methods for different virtual hosts
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/cyrsasl.erl: Likewise
	* src/cyrsasl_digest.erl: Likewise
	* src/cyrsasl_plain.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_config.erl: Likewise
	* src/extauth.erl: Likewise
	* src/mod_last_odbc.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise
	* src/mod_roster_odbc.erl: Likewise
	* src/odbc/ejabberd_odbc.erl: Likewise
	* src/odbc/ejabberd_odbc_sup.erl: Likewise

2005-07-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_app.erl: Bugfix

	* src/ejabberd_config.erl: Bugfix

2005-06-30  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_offline.erl: Bugfix

2005-06-20  Alexey Shchepin  <alexey@sevcom.net>

	* (all): Enhanced virtual hosting support

2005-05-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Bugfix

2005-05-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/pt-br.msg: New Brazilian Portuguese translation (thanks
	to Felipe Brito Vasconcellos)

2005-05-23  Alexey Shchepin  <alexey@sevcom.net>

	* (all): ejabberd-0.9.1 released

	* src/msgs/fr.msg: Updated (thanks to Mickael Remond)
